--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Iterated Prisoner's Dilemma</title>
 </head>
 <body>
+    <button id="start-button">Start Game</button>
     <script src="main.js" type="module"></script>
 </body>
 </html>
