--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iterated Prisoner's Dilemma</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <style>
-        @media (prefers-color-scheme: dark) {
-            body {
-                background: #000;
-                color: #fff;
-            }
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-    <button id="start-button">Start Game</button>
+    <section class="main-container">
+        <h1 class="main-heading">Iterated Prisoner's Dilemma</h1>
+        <p class="page-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A, dolor, optio necessitatibus expedita magnam libero, debitis ullam officiis aliquid consequatur error odio unde vel ducimus rem ex eos! Voluptatibus, eum?</p>
+        <button id="start-button2">Test simulation</button>
+        <button id="start-button3">Play against computer</button>
+        
+        <button id="start-button">Start Game</button>
+    </section>
     <script src="main.js" type="module"></script>
 </body>
 </html>
