--- a/index.html
+++ b/index.html
@@ -29,12 +29,30 @@
                 </div>
             </div>
             <div class="game-action form_full-width">
-                <p>
-                    <label for="iterations">Iterations</label>
-                    <!-- <input type="range" name="" id="iterations" min="2" max="200" value="20"> -->
-                    <input type="number" name="" id="iterations" max="200" min="2" value="10">
-                </p>
-                <button id="button-start">Start simulation</button>
+                <div class="game-action__form">
+                    <p>
+                        <label for="iterations">Iterations</label>
+                        <!-- <input type="range" name="" id="iterations" min="2" max="200" value="20"> -->
+                        <input type="number" name="" id="iterations" max="200" min="2" value="30">
+                    </p>
+                    <button id="button-start">Start simulation</button>
+                </div>
+                <div class="player-display">
+                    <div class="player-display__score-group">
+                        <div class="player-display__column player-1">
+                            <strong class="player-display__score">
+                                <span class="js-score">0</span>
+                                <span>points</span>
+                            </strong>
+                        </div>
+                        <div class="player-display__column player-2">
+                            <strong class="player-display__score">
+                                <span class="js-score">0</span>
+                                <span>points</span>
+                            </strong>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
